--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,10 +8,12 @@
 @import "base/typography";
 @import "base/utility";
 
+
 @import "components/cart";
 @import "components/hero";
 @import "components/page-hero";
 @import "components/popup-form";
+@import "components/preloader";
 @import "components/products";
 @import "components/sort";
 @import "components/watch-info";
