--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -123,3 +123,13 @@
 }
 
 // SORT PRODUCTS ANIMATION END
+
+
+@keyframes loader360 {
+  0%{transform: rotate(0);}
+  100%{transform: rotate(1turn) ;}
+}
+@keyframes landingName {
+  0%{background-position: 100%;}
+  100%{background-position: 0;}
+}
