--- a/sass/components/_cart.scss
+++ b/sass/components/_cart.scss
@@ -6,7 +6,15 @@
   visibility: hidden;
   transition:all .3s;
 
-  
+  &_message {
+    color: #000;
+    display: grid;
+    place-content: center;
+    font-size: 3rem;
+    margin-top: 30%;
+  }
+
+
   &__background {
     position: fixed;
     height: 100%;
