--- a/sass/components/_watch-slider.scss
+++ b/sass/components/_watch-slider.scss
@@ -13,6 +13,10 @@
      padding: 2rem;
      gap: 1rem;
      margin: 0 5rem;
+
+     @include respond(phone-tab) {
+      display: none;
+     }
    
    h3 {
     text-transform: capitalize;
